crf post processing

--- a/Mask_RCNN/Prostate_evaluation_mode.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import module from system lib\n",
@@ -61,6 +63,7 @@
     "import visualize\n",
     "from model import log\n",
     "import prostate\n",
+    "import pydensecrf.densecrf as dcrf\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -215,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the Dataset and Specify the Interested Image"
+    "## Prepare the Dataset"
    ]
   },
   {
