--- a/Mask_RCNN/Prostate_evaluation_mode_threshold.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode_threshold.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the Dataset and Specify the Interested Image"
+    "## Prepare the Dataset"
    ]
   },
   {
