modified train schedule

--- a/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
@@ -268,7 +268,7 @@
     "    d.setUnaryEnergy(unary)\n",
     "    # This potential penalizes small pieces of segmentation that are\n",
     "    # spatially isolated -- enforces more spatially consistent segmentations\n",
-    "    feats = create_pairwise_gaussian(sdims=(20, 20), shape=img.shape[:2])\n",
+    "    feats = create_pairwise_gaussian(sdims=(7, 7), shape=img.shape[:2])\n",
     "    d.addPairwiseEnergy(feats, compat=3,\n",
     "                        kernel=dcrf.DIAG_KERNEL,\n",
     "                        normalization=dcrf.NORMALIZE_SYMMETRIC)\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +348,43 @@
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
@@ -432,9 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[ 45900228.   1515793.   3381285.    780116.]\n",
+      " [  1712903.  10483797.   1673622.    292186.]\n",
+      " [  2992671.    523081.  30850917.     72304.]\n",
+      " [   330065.    249113.    173290.   7071957.]]\n",
+      " mIOU: 0.753573807844 \n",
+      " IOU for each class: [0.81077099858635093, 0.63729371061478701, 0.77774434122726677, 0.78848618094864431] \n",
+      " Below_th: False\n"
+     ]
+    }
+   ],
    "source": [
     "mIOU, IOU, below_th = utils.compute_mIOU(C_MATRIX, th = 0.5)\n",
     "print('Confusion Matrix:\\n', C_MATRIX)\n",
