add resnet part

--- a/Mask_RCNN/Prostate_evaluation_mode.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,7 @@
     "    IMAGE_MIN_DIM = 512\n",
     "    DETECTION_CROP = [128, 384, 128, 384] # [height_crop_start, height_crop_end, width_crop_start, width_crop_end]\n",
     "    MODE = 16\n",
+    "    USE_TUMORCLASS = True\n",
     "evaluation_config = EvaluationConfig()\n",
     "evaluation_config.display()"
    ]
@@ -177,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180322T1029_held_out_set_0/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
@@ -196,7 +197,7 @@
     "# Get path to saved weights\n",
     "# Either set a specific path, find a trained weights specified by epoch and held_out_set or find last trained weights\n",
     "h5_filename = None # Specify the h5 filename here if you want to choose a specific file\n",
-    "epoch = -1\n",
+    "epoch = 71\n",
     "\n",
     "if h5_filename is not None:\n",
     "    model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
@@ -204,7 +205,7 @@
     "    model_path = model.find_last()[1]\n",
     "else:\n",
     "    try:\n",
-    "        model_path = model.find_specific(epoch = epoch, held_out_set = held_out_set)[1]\n",
+    "        model_path = model.find_specific(epoch = epoch, held_out_set = 0)[1]\n",
     "    except:\n",
     "        model_path = model.find_specific(epoch = epoch)[1]\n",
     "\n",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +286,16 @@
     "    results = model.detect([image], verbose=0)\n",
     "    # TODO: create a function for evaluation in model\n",
     "    r = results[0]    \n",
-    "    if np.argmax(r['tumor_probs']) == 1:\n",
+    "#     if np.argmax(r['tumor_probs']) == 1 and len(r['class_ids']) != 0:\n",
+    "#         det_sementic_mask = r['sementic_mask']\n",
+    "#     else:\n",
+    "#         det_sementic_mask = np.zeros((image.shape[0], image.shape[1]))\n",
+    "    ## This section only enabled wo Diagnosit Network Head (DNH)\n",
+    "    if len(r['class_ids']) != 0:\n",
     "        det_sementic_mask = r['sementic_mask']\n",
     "    else:\n",
     "        det_sementic_mask = np.zeros((image.shape[0], image.shape[1]))\n",
+    "    \n",
     "    det_sementic_mask = det_sementic_mask[hv, wv] # crop the detection    \n",
     "    # Compute confusion matrix\n",
     "    c_matrix = confusion_matrix(np.ravel(gt_sementic_mask), np.ravel(det_sementic_mask))\n",
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +325,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[ 45077868.   1786838.   3818609.    894107.]\n",
-      " [  1106189.  10988395.   1769334.    298590.]\n",
-      " [  2580741.    617618.  31157456.     83158.]\n",
-      " [   286662.    264904.    178204.   7094655.]]\n",
-      " mIOU: 0.754717887932 \n",
-      " IOU for each class: [0.81146795988278453, 0.65283276936344792, 0.77496239284946788, 0.77960842963073662] \n",
+      " [[ 40158923.   1563082.   8198426.   1656991.]\n",
+      " [   898392.  12150524.   1013789.     99803.]\n",
+      " [  3214622.    371217.  30799071.     54063.]\n",
+      " [   277789.     96614.    155908.   7294114.]]\n",
+      " mIOU: 0.731987597687 \n",
+      " IOU for each class: [0.71753075964084978, 0.7503370658985522, 0.70306123464563819, 0.75702133056406651] \n",
       " Below_th: False\n"
      ]
     }
@@ -334,6 +341,31 @@
     "print(' mIOU:', mIOU, '\\n', \n",
     "      'IOU for each class:', IOU, '\\n',\n",
     "      'Below_th:', below_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.io\n",
+    "filename = \"Set%d_wo_DNH\"%held_out_set\n",
+    "C_Matrix_dict = {filename:C_MATRIX}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "file_path = filename + \".mat\"\n",
+    "scipy.io.savemat(file_path, C_Matrix_dict)"
    ]
   },
   {
