--- a/Mask_RCNN/Prostate_evaluation_mode_parallel.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode_parallel.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "# Specify GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"3\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -101,14 +101,14 @@
       " [ 16  16]\n",
       " [  8   8]]\n",
       "BACKBONE_STRIDES               [4, 8, 16, 32, 64]\n",
-      "BATCH_SIZE                     1\n",
+      "BATCH_SIZE                     8\n",
       "BBOX_STD_DEV                   [ 0.1  0.1  0.2  0.2]\n",
       "DETECTION_CROP                 [128, 384, 128, 384]\n",
       "DETECTION_MAX_INSTANCES        100\n",
       "DETECTION_MIN_CONFIDENCE       0.5\n",
       "DETECTION_NMS_THRESHOLD        1\n",
-      "GPU_COUNT                      1\n",
-      "IMAGES_PER_GPU                 1\n",
+      "GPU_COUNT                      2\n",
+      "IMAGES_PER_GPU                 4\n",
       "IMAGE_MAX_DIM                  512\n",
       "IMAGE_MIN_DIM                  512\n",
       "IMAGE_PADDING                  True\n",
@@ -118,7 +118,7 @@
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
+      "MEAN_PIXEL                     [ 193.95062641  120.83140887  183.74016669]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
       "MODE                           16\n",
       "NAME                           prostate\n",
@@ -137,7 +137,7 @@
       "TRAIN_ROIS_PER_IMAGE           200\n",
       "USE_MINI_MASK                  True\n",
       "USE_RPN_ROIS                   True\n",
-      "USE_TUMORCLASS                 True\n",
+      "USE_TUMORCLASS                 False\n",
       "VALIDATION_STEPS               50\n",
       "WEIGHT_DECAY                   0.0001\n",
       "\n",
@@ -149,7 +149,7 @@
     "# Specify the dir that store the prostate dataset\n",
     "dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
-    "held_out_set = 4\n",
+    "held_out_set = 0\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "# Configuration\n",
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180322T1029_held_out_set_0/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
     "# Get path to saved weights\n",
     "# Either set a specific path, find a trained weights specified by epoch and held_out_set or find last trained weights\n",
     "h5_filename = None # Specify the h5 filename here if you want to choose a specific file\n",
-    "epoch = -1\n",
+    "epoch = 71\n",
     "\n",
     "if h5_filename is not None:\n",
     "    model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
@@ -248,19 +248,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done evaluating 10 / 103!\n",
-      "Done evaluating 20 / 103!\n",
-      "Done evaluating 30 / 103!\n",
-      "Done evaluating 40 / 103!\n",
-      "Done evaluating 50 / 103!\n",
-      "Done evaluating 60 / 103!\n",
-      "Done evaluating 70 / 103!\n",
-      "Done evaluating 80 / 103!\n",
-      "Done evaluating 90 / 103!\n",
-      "Done evaluating 100 / 103!\n"
+     "ename": "AssertionError",
+     "evalue": "len(images) must be equal to BATCH_SIZE",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-8b595dfd0af0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mgt_sementic_mask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgt_sementic_mask\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ATmask'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwv\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# crop the label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# Run object detection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0;31m# TODO: create a function for evaluation in model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/model.py\u001b[0m in \u001b[0;36mdetect\u001b[0;34m(self, images, verbose)\u001b[0m\n\u001b[1;32m   2540\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"detection\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Create model in detection mode.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2541\u001b[0m         assert len(\n\u001b[0;32m-> 2542\u001b[0;31m             images) == self.config.BATCH_SIZE, \"len(images) must be equal to BATCH_SIZE\"\n\u001b[0m\u001b[1;32m   2543\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2544\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: len(images) must be equal to BATCH_SIZE"
      ]
     }
    ],
@@ -309,24 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix:\n",
-      " [[ 45077868.   1786838.   3818609.    894107.]\n",
-      " [  1106189.  10988395.   1769334.    298590.]\n",
-      " [  2580741.    617618.  31157456.     83158.]\n",
-      " [   286662.    264904.    178204.   7094655.]]\n",
-      " mIOU: 0.754717887932 \n",
-      " IOU for each class: [0.81146795988278453, 0.65283276936344792, 0.77496239284946788, 0.77960842963073662] \n",
-      " Below_th: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mIOU, IOU, below_th = utils.compute_mIOU(C_MATRIX, th = 0.5)\n",
     "print('Confusion Matrix:\\n', C_MATRIX)\n",
