--- a/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "# Specify GPU to use\n",
     "os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\"\n",
     "\n",
     "# Root directory of the project\n",
     "ROOT_DIR = os.getcwd()\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
+      "MEAN_PIXEL                     [ 194.05923719  121.10764634  183.85822645]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
       "MODE                           16\n",
       "NAME                           prostate\n",
@@ -152,7 +152,7 @@
     "# Specify the dir that store the prostate dataset\n",
     "dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
-    "held_out_set = 4\n",
+    "held_out_set = 2\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "# Configuration\n",
@@ -166,6 +166,7 @@
     "    IMAGE_MIN_DIM = 512\n",
     "    DETECTION_CROP = [128, 384, 128, 384] # [height_crop_start, height_crop_end, width_crop_start, width_crop_end]\n",
     "    MODE = 16\n",
+    "    USE_TUMORCLASS = True\n",
     "evaluation_config = EvaluationConfig()\n",
     "evaluation_config.display()"
    ]
@@ -179,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554-held-out-4/mask_rcnn_prostate_0071.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180320T1313_held_out_set_1/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
@@ -198,7 +199,7 @@
     "# Get path to saved weights\n",
     "# Either set a specific path, find a trained weights specified by epoch and held_out_set or find last trained weights\n",
     "h5_filename = None # Specify the h5 filename here if you want to choose a specific file\n",
-    "epoch = -1\n",
+    "epoch = 71\n",
     "\n",
     "if h5_filename is not None:\n",
     "    model_path = os.path.join(ROOT_DIR, \".h5 file name here\")\n",
@@ -206,7 +207,7 @@
     "    model_path = model.find_last()[1]\n",
     "else:\n",
     "    try:\n",
-    "        model_path = model.find_specific(epoch = epoch, held_out_set = held_out_set)[1]\n",
+    "        model_path = model.find_specific(epoch = epoch, held_out_set = 1)[1]\n",
     "    except:\n",
     "        model_path = model.find_specific(epoch = epoch)[1]\n",
     "\n",
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -289,10 +290,10 @@
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
+      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "/home/wenyuan/.conda/envs/maskrcnn/lib/python3.5/site-packages/pydensecrf/utils.py:79: RuntimeWarning: divide by zero encountered in log\n",
       "  return -np.log(sm).reshape([num_cls, -1]).astype(np.float32)\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
@@ -395,7 +396,6 @@
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
       "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n"
      ]
     }
@@ -410,6 +410,7 @@
     "display_step = 10 # print out process for every display_step images\n",
     "total_image = len(val_list)\n",
     "for Image_id in range(0, len(dataset_val.image_ids), evaluation_config.MODE):\n",
+    "# for Image_id in range(576, 577):\n",
     "    image_whole = []\n",
     "    gt_mask_whole = []\n",
     "    det_mask_whole = []\n",
@@ -433,7 +434,7 @@
     "        r = results[0]\n",
     "\n",
     "        # TODO: modify this part\n",
-    "        if np.argmax(r['tumor_probs']) == 1:\n",
+    "        if np.argmax(r['tumor_probs']) == 1 and len(r['class_ids']) != 0:\n",
     "            det_sementic_mask = r['sementic_mask']\n",
     "            det_sementic_probs = r['prob_mask']\n",
     "        else:\n",
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -477,12 +478,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[ 45900228.   1515793.   3381285.    780116.]\n",
-      " [  1712903.  10483797.   1673622.    292186.]\n",
-      " [  2992671.    523081.  30850917.     72304.]\n",
-      " [   330065.    249113.    173290.   7071957.]]\n",
-      " mIOU: 0.753573807844 \n",
-      " IOU for each class: [0.81077099858635093, 0.63729371061478701, 0.77774434122726677, 0.78848618094864431] \n",
+      " [[  4.47880610e+07   1.06823800e+06   4.09989500e+06   7.28478000e+05]\n",
+      " [  9.74532000e+05   8.72908800e+06   7.42293000e+05   2.13060000e+04]\n",
+      " [  2.75401700e+06   4.79897000e+05   3.46877060e+07   4.21070000e+04]\n",
+      " [  3.53799000e+05   2.34613000e+05   1.76299000e+05   7.07442300e+06]]\n",
+      " mIOU: 0.789262029297 \n",
+      " IOU for each class: [0.817792551064491, 0.71258053184959602, 0.80702464512414362, 0.8196503891484499] \n",
       " Below_th: False\n"
      ]
     }
@@ -493,6 +494,21 @@
     "print(' mIOU:', mIOU, '\\n', \n",
     "      'IOU for each class:', IOU, '\\n',\n",
     "      'Below_th:', below_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import scipy.io\n",
+    "filename = \"Set%d_w_DNH_CRF\"%held_out_set\n",
+    "C_Matrix_dict = {filename:C_MATRIX}\n",
+    "file_path = filename + \".mat\"\n",
+    "scipy.io.savemat(file_path, C_Matrix_dict)"
    ]
   },
   {
